[package]
name = "dota-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
clap = { version = "3.0.7", features = ["derive"] }
image = "0.23.14"